Engineer III Updates

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,7 +3,7 @@
 <p><a href="https://www.linkedin.com/in/josefdoornink"><strong>LinkedIn</strong></a> | <strong>Portland, Oregon</strong></p>
 <br>
 
-<h4 id="-professional-profile-"><strong>PROFESSIONAL PROFILE</strong></h4>
+<h3 id="-professional-profile-"><strong>PROFESSIONAL PROFILE</strong></h3>
 <p>Experienced devops engineer with over 6 years experience developing enterprise level software using multiple technologies for consumer and business based experiences.
 <br>
 Increased levels of responsibility and ownership in teams, project and strategies.
@@ -11,27 +11,68 @@ Increased levels of responsibility and ownership in teams, project and strategie
 Broad knowledge base team player with experience developing in multiple time-sensitive environments.</p>
 <br>
 
-<h5><strong>TOOLS/LANGUAGES</strong></h5>
+<h3><strong>TOOLS/LANGUAGES</strong></h3>
 <p>Azure Portal, Agile Methodology, Kubernetes, Helm, Docker, Azure DevOps, GIT, GITHUB, GITHUB Actions, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, Firebase, Ingress, node.js, NPM Angular, LabView, Evernote, Slack, Bootstrap, Pluralsight, PowerShell, Fiddler, Postman</p>
 <br>
-<h5><strong>CERTIFICATIONS</strong></h5>
+<h3><strong>CERTIFICATIONS</strong></h3>
 <p>MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a>
 <br>
    CERTIFIED KUBERNETES ADMINISTRATOR <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a></p>
 <br/>
-<h5><strong>RELEVANT APPLIED EXPERTISE AND EXPERIENCE</strong></h5>
+<h3><strong>RELEVANT APPLIED EXPERTISE AND EXPERIENCE</strong></h3>
 <table style="width:100%">
 <tr style="text-align:left">
 <td>CI/CD Creation and Maintentance <br/>Cloud Assets <br/>SaaS Creation and Delivery <br/>IaaS Creation and Maintenance <br/>Constant Improvement and Delivery</td>
 <td style="text-align:right">Business Process Design<br/> Asset Management and Control<br/> Solutions and Service Management<br/> Team Building and Management <br/> Innovation and Release Management
-</tr>    
+</tr>   
 </table>
-    <p><br/></p>
-    <h5 id="-work-experience-"><strong>WORK EXPERIENCE</strong></h5>
-    <table >
+<p><br/></p>
+<h3 id="-work-experience-"><strong>WORK EXPERIENCE</strong></h3>
+<table >
     <thead>
     <tr>
-    <th style="text-align:left"><strong>04.2018 – CURRENT</strong></th>
+    <th style="text-align:left"><strong>01.2022 – NOW</strong></th>
+    <th></th><strong>VIEWPOINT CONSTRUCTION SOFTWARE</strong></th>
+    <th style="text-align:right">Portland, OR</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    <td class="leftTop"><strong>Title:</strong></td>
+    <td style="text-align:left"><strong>SOFTWARE DEVELOPER III (DEVOPS)</strong></td>
+    </tr>
+    <tr>
+    <td class="leftTop"><strong>Teams:</strong></td>
+    <td class="centerTop"><p class="justifyAlign">HRIS, DevOps</p></td>
+    </tr>
+    <tr>
+    <td class="leftTop"><strong>Summary:</strong></td>
+    <td class="centerTop"><p class="justifyAlign"> Senior DevOps Engineer working with application developers to automate release and deployment of applications into a runtime environment using Continuous Integration patterns and tools to achieve successful continuous delivery solutions.
+    </p></td>
+    </tr>
+    <tr></tr><tr></tr><tr></tr>
+    <tr>
+    <br/>
+    <td class="leftTop"><strong>Involvement:</strong></td>
+    <td><p class="justifyAlign"> 
+        Responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.<br/>
+        Consulting with management on the operational requirements of software solutions.<br/>
+        Contributing expertise on information system options, risk, and operational impact.<br/>
+        Mentoring software developers in gaining experience and assuming DevOps responsibilities.<br/>
+        Managing the installation and configuration of solutions.<br/>
+        Collaborating with developers on software requirements, as well as interpreting test stage data.<br/>
+        Completing code and script updates, as well as implementing new third party products where necessary.<br/>
+        Overseeing routine maintenance procedures and performing diagnostic tests.<br/>
+        Documenting processes and monitoring performance metrics.<br/>
+        Conforming to best practices in network administration and cybersecurity.<br/>
+    </tr>
+    </tbody>
+</table>
+<br>
+<table >
+    <thead>
+    <tr>
+    <th style="text-align:left"><strong>04.2018 – 12.2021</strong></th>
     <th></th><strong>VIEWPOINT CONSTRUCTION SOFTWARE</strong></th>
     <th style="text-align:right">Portland, OR</th>
     </tr>
@@ -43,19 +84,21 @@ Broad knowledge base team player with experience developing in multiple time-sen
     </tr>
     <tr>
     <td class="leftTop"><strong>Teams:</strong></td>
-    <td style="text-align:center"><p class="justifyAlign">HRIM <br> DevOps<br> Dashboard Management</p></td>
+    <td class="centerTop"><p class="justifyAlign">HRIS, DevOps, Dashboard Management</p></td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Summary:</strong></td>
     <td class="centerTop"><p class="justifyAlign"> DevOps engineer on multiple concurrent teams tasked with architecture, creation and maintenance of microservice CI/CD pipelines for SaaS offerings based in Azure Portal and Microsoft technologies. </p></td>
     </tr>
+    <tr></tr><tr></tr><tr></tr>
+    <br/>
     <tr>
     <td class="leftTop"><strong>Involvement:</strong></td>
-    <td><p class="justifyAlign"> Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.<br/><br/>
-            Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.<br/><br/>
-            Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.<br/><br/>
-            Implemented monitoring solutions for both service and infrastructure as well as adding improvements to our internal tooling for improved software performance and delivery.<br/><br/>
-            Worked with teams of product managers, developers and architects to document and understand existing functionality of an on-premise software solution for future Cloud transfer.<br/><br/>
+    <td><p class="justifyAlign"> Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.<br/>
+            Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.<br/>
+            Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.<br/>
+            Implemented monitoring solutions for both service and infrastructure as well as adding improvements to our internal tooling for improved software performance and delivery.<br/>
+            Worked with teams of product managers, developers and architects to document and understand existing functionality of an on-premise software solution for future Cloud transfer.<br/>
             Front-End engineer tasked with creating Angular UI integration with .NET APIs for transfer of on-premise software solution to the Cloud. 
     </tr>
     </tbody>
@@ -64,8 +107,8 @@ Broad knowledge base team player with experience developing in multiple time-sen
 <table >
     <thead>
     <tr>
-    <th style="text-align:left"><strong>04.2014 – CURRENT</strong></th>
-    <th class="centerTop"><strong>ONFULFILLMENT™</strong></th>
+    <th style="text-align:left"><strong>04.2014 – 04.2018</strong></th>
+    <th></th><strong>ONFULFILLMENT™</strong></th>
     <th style="text-align:right">Portland, OR</th>
     </tr>
     </thead>
@@ -76,25 +119,26 @@ Broad knowledge base team player with experience developing in multiple time-sen
     </tr>
     <tr>
     <td class="leftTop"><strong>Teams:</strong></td>
-    <td style="text-align:center"><p class="justifyAlign"> Action - Janice Kiser, Manager<br/> Building – Allen Newton, Senior Development Engineer  </p></td>
+    <td class="centerTop"><p class="justifyAlign">Action - Janice Kiser, Manager; Building – Allen Newton, Senior Development Engineer  </p></td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Summary:</strong></td>
     <td class="centerTop"><p class="justifyAlign"> Software Engineer tasked with development, refactoring, improving architecture and maintenance of multi-tenant software platform for e-commerce sales through the use of Microsoft Stack technology and tools integrated with API based SaaS software. </p></td>
     </tr>
+    <tr></tr><tr></tr><tr></tr>
     <tr>
     <td class="leftTop"><strong>Involvement:</strong></td>
     <td><p class="justifyAlign"> Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#5.0, C#6.0, Microsoft .Net 4.6, Visual Studio 2013-2015 and SSMS 2016, HTML5, Javascript, CSS, T-SQL, and SSMS 2016 and GIT for version control.
         <br/>
         <br/>
-        Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.<br/><br/>
-        Refactor existing C#5.0 code for better performance as measured through New Relic performance management.<br/><br/>
-        Replace custom functionality with NuGet packages and maintain versioning using Visual Studio 2015 NuGet Package Manager.<br/><br/>
-        Provide defect tracking code and feature implementation of platform specific software to allow customer service representatives ability to provide real-time desk support service using classic.asp code, T-SQL, Web Forms and C#5.0 code in Visual Studio 2013 and SSMS 2016.<br/><br/>
-        Work within an Agile team environment to develop web-based applications using Microsoft Stack software using LeanKit for project tracking and management and GIT for version control.<br/><br/>
-        Supply code specific solutions for multiple stake-holders to determine scalable, manageable solutions that fit customer specific needs with communication using Slack, Microsoft Office 365 and Business Skype.<br/><br/>
-        Create resolutions, develop integrated project plans and identify governance vulnerabilities within organization the organization, asses impact and present solutions to groups of 5-10 developers and stakeholders.<br/><br/>
-        Assess new technologies and potential influence on current requirements and business rule implementations.Monitor defects of current architecture through implementation and use of Error Logging Modules and Handlers (ELMAH) technology along with New Relic performance software.<br/><br/>
+        Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.<br/>
+        Refactor existing C#5.0 code for better performance as measured through New Relic performance management.<br/>
+        Replace custom functionality with NuGet packages and maintain versioning using Visual Studio 2015 NuGet Package Manager.<br/>
+        Provide defect tracking code and feature implementation of platform specific software to allow customer service representatives ability to provide real-time desk support service using classic.asp code, T-SQL, Web Forms and C#5.0 code in Visual Studio 2013 and SSMS 2016.<br/>
+        Work within an Agile team environment to develop web-based applications using Microsoft Stack software using LeanKit for project tracking and management and GIT for version control.<br/>
+        Supply code specific solutions for multiple stake-holders to determine scalable, manageable solutions that fit customer specific needs with communication using Slack, Microsoft Office 365 and Business Skype.<br/>
+        Create resolutions, develop integrated project plans and identify governance vulnerabilities within organization the organization, asses impact and present solutions to groups of 5-10 developers and stakeholders.<br/>
+        Assess new technologies and potential influence on current requirements and business rule implementations.Monitor defects of current architecture through implementation and use of Error Logging Modules and Handlers (ELMAH) technology along with New Relic performance software.<br/>
         Reverse engineer current features for use with updated technologies converting and expanding Visual Basic code to .Net 4.5 framework using C#5.0, Webforms and T-SQL.Architect and support scalable in-house ECOM solutions integrated with Authorize.net and CyberSource API&#39;s to handle greater than 1200 orders per day with a revenue of over 18 million annually. </p></td>
     </tr>
     </tbody>
@@ -125,11 +169,11 @@ Broad knowledge base team player with experience developing in multiple time-sen
     </tr>
     <tr>
     <td class="leftTop"><strong>Involvement:</strong></td>
-    <td style="text-align:center"><p class="justifyAlign"> 
-        Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.<br/><br/>
-        Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.<br/><br/>
-        Integrate and support conversion functionality throughout customized software and integrating with Authorize.Net API.<br/><br/>
-        Maintain and implement features in an administration portal implemented using Visual Basic code focused at enabling non-technical employee code maintenance for real-time desk support.<br/><br/>
+    <td><p class="justifyAlign"> 
+        Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.<br/>
+        Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.<br/>
+        Integrate and support conversion functionality throughout customized software and integrating with Authorize.Net API.<br/>
+        Maintain and implement features in an administration portal implemented using Visual Basic code focused at enabling non-technical employee code maintenance for real-time desk support.<br/>
         Communicate with customer service representatives for requirements gathering and creating business rules resulting in software feature implementations and maintenance using Microsoft Office 365 tools, Business Skype and GoTo Meeting for streamlined communication. </p></td>
     </tr>
     </tbody>
@@ -161,11 +205,11 @@ Broad knowledge base team player with experience developing in multiple time-sen
     <tr>
     <td class="leftTop"><strong>Involvement:</strong></td>
     <td style="text-align:center"><p class="justifyAlign"> 
-        Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).<br/><br/>
-        Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).<br/><br/>
-        Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.<br/><br/>
-        Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).<br/><br/>
-        Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0<br/><br/>
+        Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).<br/>
+        Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).<br/>
+        Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.<br/>
+        Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).<br/>
+        Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0<br/>
         Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </p></td>
     </tr>
     </tbody>
@@ -252,7 +296,7 @@ Broad knowledge base team player with experience developing in multiple time-sen
     <tr>
     <td class="leftTop"><strong> Involvement:</strong></td>
     <td><p class="justifyAlign">
-        In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.<br/><br/>
+        In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.<br/>
         Solely responsible for grading, lab creation and content delivery.</td>
     </tr>
     </tbody>
@@ -284,11 +328,11 @@ Broad knowledge base team player with experience developing in multiple time-sen
 
 <br/>
 <br>
-<h6 id="-education-"><strong>EDUCATION</strong></h6>
+<h3 id="-education-"><strong>EDUCATION</strong></h3>
 <table style="width:100%">
     <tr>
-      <td style="text-align:left;"><strong>Post-Graduate:</strong> Master&#39;s, 2006<br/> University of California, Davis<br/> Biomechanics: GPA: 3.8</td>
-      <td style="text-align:right; vertical-align:top"><strong>Undergraduate:</strong> Bachelors of Science, 2003 <br/>California State University, Chico<br/> Mechanical Engineering: GPA: 3.5</td>
+      <td style="text-align:left;"><strong>Post-Graduate:</strong> Master&#39;s, 2006<br/> University of California, Davis<br/> Biomechanics</td>
+      <td style="text-align:right; vertical-align:top"><strong>Undergraduate:</strong> Bachelors of Science, 2003 <br/>California State University, Chico<br/> Mechanical Engineering</td>
     </tr>
 <tbody>
 <tr>
@@ -296,7 +340,7 @@ Broad knowledge base team player with experience developing in multiple time-sen
 </tbody>
 </table>
 <br/>
-<h6 id="-references-"><strong>REFERENCES</strong></h6>
+<h3 id="-references-"><strong>REFERENCES</strong></h3>
 <table style="width:100%">
 <thead>
 <tr>
@@ -312,5 +356,5 @@ Broad knowledge base team player with experience developing in multiple time-sen
 </tbody>
 </table>
 <br/>
-<h6 id="-other-"><strong>OTHER</strong></h6>
+<h3 id="-other-"><strong>OTHER</strong></h3>
 <p><strong>Hobbies:</strong> Snowboard, Guitar, Mountain Biker <br/><strong>Teams Sports:</strong> Indoor Soccer, Futsal  | <strong>Other:</strong> Certified Beer Server (2016)<br/>Lived in Argentina, Worked in Germany</p>
