--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -128,7 +128,7 @@ Broad knowledge base team player with experience developing in multiple time-sen
     <tr></tr><tr></tr><tr></tr>
     <tr>
     <td class="leftTop"><strong>Involvement:</strong></td>
-    <td><p class="justifyAlign"> Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#5.0, C#6.0, Microsoft .Net 4.6, Visual Studio 2013-2015 and SSMS 2016, HTML5, Javascript, CSS, T-SQL, and SSMS 2016 and GIT for version control.
+    <td><p class="justifyAlign"> Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#5.0, C#6.0, Microsoft .Net 4.6, Visual Studio 2013-2015 and SSMS 2016, HTML5, Javascript, CSS, T-SQL, and SSMS 2016 and GIT for version control.<br/>
         - Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.<br/>
         - Refactor existing C#5.0 code for better performance as measured through New Relic performance management.<br/>
         - Replace custom functionality with NuGet packages and maintain versioning using Visual Studio 2015 NuGet Package Manager.<br/>
