--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -129,15 +129,15 @@ Broad knowledge base team player with experience developing in multiple time-sen
     <tr>
     <td class="leftTop"><strong>Involvement:</strong></td>
     <td><p class="justifyAlign"> Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#5.0, C#6.0, Microsoft .Net 4.6, Visual Studio 2013-2015 and SSMS 2016, HTML5, Javascript, CSS, T-SQL, and SSMS 2016 and GIT for version control.<br/>
-        - Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.<br/>
-        - Refactor existing C#5.0 code for better performance as measured through New Relic performance management.<br/>
-        - Replace custom functionality with NuGet packages and maintain versioning using Visual Studio 2015 NuGet Package Manager.<br/>
-        - Provide defect tracking code and feature implementation of platform specific software to allow customer service representatives ability to provide real-time desk support service using classic.asp code, T-SQL, Web Forms and C#5.0 code in Visual Studio 2013 and SSMS 2016.<br/>
-        - Work within an Agile team environment to develop web-based applications using Microsoft Stack software using LeanKit for project tracking and management and GIT for version control.<br/>
-        - Supply code specific solutions for multiple stake-holders to determine scalable, manageable solutions that fit customer specific needs with communication using Slack, Microsoft Office 365 and Business Skype.<br/>
-        - Create resolutions, develop integrated project plans and identify governance vulnerabilities within organization the organization, asses impact and present solutions to groups of 5-10 developers and stakeholders.<br/>
-        - Assess new technologies and potential influence on current requirements and business rule implementations.Monitor defects of current architecture through implementation and use of Error Logging Modules and Handlers (ELMAH) technology along with New Relic performance software.<br/>
-        - Reverse engineer current features for use with updated technologies converting and expanding Visual Basic code to .Net 4.5 framework using C#5.0, Webforms and T-SQL.Architect and support scalable in-house ECOM solutions integrated with Authorize.net and CyberSource API&#39;s to handle greater than 1200 orders per day with a revenue of over 18 million annually. </p></td>
+        Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.<br/>
+        Refactor existing C#5.0 code for better performance as measured through New Relic performance management.<br/>
+        Replace custom functionality with NuGet packages and maintain versioning using Visual Studio 2015 NuGet Package Manager.<br/>
+        Provide defect tracking code and feature implementation of platform specific software to allow customer service representatives ability to provide real-time desk support service using classic.asp code, T-SQL, Web Forms and C#5.0 code in Visual Studio 2013 and SSMS 2016.<br/>
+        Work within an Agile team environment to develop web-based applications using Microsoft Stack software using LeanKit for project tracking and management and GIT for version control.<br/>
+        Supply code specific solutions for multiple stake-holders to determine scalable, manageable solutions that fit customer specific needs with communication using Slack, Microsoft Office 365 and Business Skype.<br/>
+        Create resolutions, develop integrated project plans and identify governance vulnerabilities within organization the organization, asses impact and present solutions to groups of 5-10 developers and stakeholders.<br/>
+        Assess new technologies and potential influence on current requirements and business rule implementations.Monitor defects of current architecture through implementation and use of Error Logging Modules and Handlers (ELMAH) technology along with New Relic performance software.<br/>
+        Reverse engineer current features for use with updated technologies converting and expanding Visual Basic code to .Net 4.5 framework using C#5.0, Webforms and T-SQL.Architect and support scalable in-house ECOM solutions integrated with Authorize.net and CyberSource API&#39;s to handle greater than 1200 orders per day with a revenue of over 18 million annually. </p></td>
     </tr>
     </tbody>
 </table>
