--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -4,7 +4,7 @@
 <br>
 
 <h3 id="-professional-profile-"><strong>PROFESSIONAL PROFILE</strong></h3>
-<p>Experienced devops engineer with over 6 years experience developing enterprise level software using multiple technologies for consumer and business based experiences.
+<p>Experienced DevOps engineer with over 8 years experience developing enterprise level software using multiple technologies for consumer and business based experiences.
 <br>
 Increased levels of responsibility and ownership in teams, project and strategies.
 <br>
@@ -47,7 +47,7 @@ Broad knowledge base team player with experience developing in multiple time-sen
     </tr>
     <tr>
     <td class="leftTop"><strong>Summary:</strong></td>
-    <td class="centerTop"><p class="justifyAlign"> Senior DevOps Engineer working with application developers to automate release and deployment of applications into a runtime environment using Continuous Integration patterns and tools to achieve successful continuous delivery solutions.
+    <td class="centerTop"><p class="justifyAlign"> - Senior DevOps Engineer working with application developers to design and automate deployment of applications into a runtime environment using Continuous Integration patterns and tools to achieve successful continuous delivery solutions across multiple geographies using a kubernetes image based deployment within the Azure portal.
     </p></td>
     </tr>
     <tr></tr><tr></tr><tr></tr>
@@ -61,8 +61,8 @@ Broad knowledge base team player with experience developing in multiple time-sen
         Mentoring software developers in gaining experience and assuming DevOps responsibilities.<br/>
         Managing the installation and configuration of solutions.<br/>
         Collaborating with developers on software requirements, as well as interpreting test stage data.<br/>
-        Completing code and script updates, as well as implementing new third party products where necessary.<br/>
-        Overseeing routine maintenance procedures and performing diagnostic tests.<br/>
+        Completing code and script updates, as well as discovering and implementing new third party products.<br/>
+        Security team member performing quarterly audits of production level clusters and providing  mitigation techniques<br/>
         Documenting processes and monitoring performance metrics.<br/>
         Conforming to best practices in network administration and cybersecurity.<br/>
     </tr>
