--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -47,7 +47,7 @@ Broad knowledge base team player with experience developing in multiple time-sen
     </tr>
     <tr>
     <td class="leftTop"><strong>Summary:</strong></td>
-    <td class="centerTop"><p class="justifyAlign"> - Senior DevOps Engineer working with application developers to design and automate deployment of applications into a runtime environment using Continuous Integration patterns and tools to achieve successful continuous delivery solutions across multiple geographies using a kubernetes image based deployment within the Azure portal.
+    <td class="centerTop"><p class="justifyAlign"> Senior DevOps Engineer working with application developers to design and automate deployment of applications into a runtime environment using Continuous Integration patterns and tools to achieve successful continuous delivery solutions across multiple geographies using a kubernetes image based deployment within the Azure portal.
     </p></td>
     </tr>
     <tr></tr><tr></tr><tr></tr>
