Add Terraform Cert

--- a/Certifications/Certifications.html
+++ b/Certifications/Certifications.html
@@ -5,6 +5,11 @@
 <p style="text-align: center"> <b> CERTIFIED KUBERNETES ADMINISTRATOR </b> 
     <br> <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a>
     <br> <a href="/img/certificates/josef-doornink-cka-certificate.pdf"><img src="/img/certificates/josef-doornink-cka-certificate.jpg" alt="CKA" width="500" height="375"></a> </p>
+    <br>
+<p style="text-align: center"> <b> TERRAFORM ASSSOCIATE </b> 
+    <br> <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"> LF-W50BPV1LPD </a>
+    <br> <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"><img src="/img/certificates/josef-doornink-terraform-certificate.jpg" alt="CKA" width="500" height="375"></a> </p>
+    <br>
 <p style="text-align: center"> <b> GOLANG UDEMY BOOTCAMP </b> 
     <br> <a href="/img/certificates/josef-doornink-golang-udemy-bootcamp.pdf"> LF-W50BPV1LPD </a>
     <br> <a href="/img/certificates/josef-doornink-golang-udemy-bootcamp.pdf"><img src="/img/certificates/josef-doornink-golang-udemy-bootcamp.jpg" alt="GOLangUdemyBootcamp" width="500" height="375"></a> </p>
