--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -12,12 +12,14 @@ Broad knowledge base team player with experience developing in multiple time-sen
 <br>
 
 <h3><strong>TOOLS/LANGUAGES</strong></h3>
-<p>Azure Portal, Agile Methodology, Kubernetes, Helm, Docker, Azure DevOps, GIT, GITHUB, GITHUB Actions, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, Firebase, Ingress, node.js, NPM Angular, LabView, Evernote, Slack, Bootstrap, Pluralsight, PowerShell, Fiddler, Postman</p>
+<p>Azure Portal, Agile Methodology, Kubernetes, Helm, Terraform, Docker, Azure DevOps, GIT, GITHUB, GITHUB Actions, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, Firebase, Ingress, node.js, NPM Angular, LabView, Evernote, Slack, Bootstrap, Pluralsight, PowerShell, Fiddler, Postman</p>
 <br>
 <h3><strong>CERTIFICATIONS</strong></h3>
 <p>MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a>
 <br>
    CERTIFIED KUBERNETES ADMINISTRATOR <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a></p>
+<br/>
+   TERRAFORM ASSOCIATE <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"> HCTAO-002 </a></p>
 <br/>
 <h3><strong>RELEVANT APPLIED EXPERTISE AND EXPERIENCE</strong></h3>
 <table style="width:100%">
