--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       </div>
     </div> 
 
-    <!-- Portfolio Resume -->
+    <!-- Portfolio Resume
     <div class="portfolio-modal mfp-hide" id="portfolio-resume">
       <div class="portfolio-modal-dialog bg-white">
         <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume3.pdf">
@@ -311,7 +311,7 @@
           </div>
         </div>
       </div>
-    </div> 
+    </div>  -->
 
     <!-- Portfolio Patents and Awards -->
     <div class="portfolio-modal mfp-hide" id="portfolio-patents-and-awards">
